# MaterialKiri

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android-project/: build.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
src/config/: index.html.in
src/config/src_list/kirikirisdl2/: includes.txt  sources.txt
src/core/base/sdl2/: AndroidAssetManager.c  AndroidAssetManager.h  FuncStubs.cpp  NativeEventQueue.cpp  PluginImpl.cpp  PluginImpl.h  StorageImpl.cpp  StorageImpl.h  SusieArchive.cpp  SusieArchive.h  SysInitImpl.cpp
src/core/environ/sdl2/: Application.cpp  Application.h  ApplicationSpecialPath.h  DetectCPU.cpp  TVPWindow.h
src/core/plugin/: ncbind.cpp  ncbind.hpp
src/core/sdl2/: SDLApplication.cpp  SDLApplication.h  SDLBitmapCompletion.cpp  SDLBitmapCompletion.h  SDLEntrypoint.cpp
src/plugins/: CMakeLists.txt  addFont.cpp  csvParser.cpp  cxdec.c  cxdecoder.cpp  menu.cpp  scriptsEx.cpp  textrender.cpp  win_defs.h
src/plugins/KAGParserEx/: CMakeLists.txt  KAGParser.cpp  KAGParserEx.cpp  KAGParserEx.hpp  Main.cpp
src/plugins/extrans/: CMakeLists.txt  common.h  extrans.cpp  mosaic.cpp  ripple.cpp  rotatebase.cpp  rotatebase.h  rotatetrans.cpp  turn.cpp  wave.cpp
src/plugins/motionplayer/: CMakeLists.txt  emotefile.cpp  emotefile.h  emoteplayer.cpp  emoteplayerclass.cpp  emoteplayerclass.h
src/plugins/psbfile/: CMakeLists.txt  PSB.cpp  PSBFile.cpp  PSBFile.h  psbData.cpp  psbData.h  psbMedia.cpp  psbMedia.h
src/plugins/win32dialog/: CMakeLists.txt  dialog.hpp  dialog_config.hpp  main.cpp  manual.tjs  simplethread.hpp  testres_res.rc
(+9 files in other folders)
